Updated to java 22