@@ -6,19 +6,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>swing-examples</artifactId>
+    <artifactId>java-swing-examples</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--dependencies-->
         <dyn4j.version>4.2.1</dyn4j.version>
         <annotations.version>24.0.1</annotations.version>
         <hipster-core.version>1.0.1</hipster-core.version>
         <logback-classic.version>1.5.3</logback-classic.version>
-        <hzt.utils.version>1.0.3.21</hzt.utils.version>
+        <hzt.utils.version>1.0.3.22</hzt.utils.version>
         <!--test dependencies-->
         <junit.jupiter.version>5.10.1</junit.jupiter.version>
         <!--plugins-->
@@ -86,6 +86,7 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
@@ -93,6 +94,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
